--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,6 @@ man/i3status.1
 # If you chose a different directory name,
 # it is up to you to arrange for it to be ignored by git,
 # e.g. by listing your directory in .git/info/exclude.
-/build
+/build/
+
+/.cache/
